style(css): increase social icon size on homepage
Signed-off-by: ovidiu.pascal <ovidiu.pascal@orange.com>

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -2,8 +2,8 @@
 /* Social Icons Styling - Homepage Only                                                            */
 /* ================================================================================================ */
 
-/* Target homepage by checking if we're at root */
-body:not(.list):not(.single) i[class*="fa-"] {
+/* Only social icons in about section on homepage (F12) */
+body:not(.list):not(.single) .about i[class*="fa-"] {
   font-size: 4.5rem !important;
 }
 
