style(css): increase spacing between navigation menu items
Signed-off-by: ovidiu.pascal <ovidiu.pascal@orange.com>

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -20,3 +20,12 @@ body:not(.list):not(.single) .about i[class*="fa-"] {
 .navigation-title {
   font-size: 2.75rem !important;
 }
+
+/* ================================================================================================ */
+/* Space Out Navigation Menu Items                                                                 */
+/* ================================================================================================ */
+
+/* Add spacing between menu items */
+.navigation-list li {
+  margin: 0 0.30rem !important;
+}
